[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.83"
reqwest="0.11.22"
serde = "1.0.193"
serde_json = "1.0.108"
wasm-bindgen-futures = "0.4.39"

serde-wasm-bindgen = "0.6.1"
tokio = { version = "1.34.0", features = ["rt", "macros"] }
